--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/Montserrat-SemiBold.ttf
+        - asset: assets/Montserrat-SemiBoldItalic.ttf
+          style: italic
+    - family: Quicksand
+      fonts:
+        - asset: assets/Quicksand-Medium.ttf
+        - asset: assets/Quicksand-Bold.ttf
+          weight: 700
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
