--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   firebase_core: ^0.4.3+3
+  firebase_auth: ^0.15.4
   cloud_firestore: ^0.13.1
   flutter_spinkit: ^4.1.1+1
 
