--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   firebase_auth: ^0.15.4
   cloud_firestore: ^0.13.1
   flutter_spinkit: ^4.1.1+1
+  sqflite: ^1.2.0
+  path_provider: ^1.6.0
 
 dev_dependencies:
   flutter_test:
