--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,9 @@ dependencies:
   firebase_core: ^0.4.3+3
   firebase_auth: ^0.15.4
   cloud_firestore: ^0.13.1
-  flutter_spinkit: ^4.1.1+1
   sqflite: ^1.2.0
   path_provider: ^1.6.0
+  toast: ^0.1.5
 
 dev_dependencies:
   flutter_test:
