--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   sqflite: ^1.2.0
   path_provider: ^1.6.0
   toast: ^0.1.5
+  shared_preferences: ^0.5.6+1
 
 dev_dependencies:
   flutter_test:
